[gd_scene load_steps=4 format=3 uid="uid://7djygch4t0tg"]

[ext_resource type="Script" uid="uid://cdl1qy0a03gmg" path="res://email_bank_app.gd" id="1_b7pj5"]
[ext_resource type="Texture2D" uid="uid://buxh5qxwg4ci4" path="res://proto_minigame/eye.png" id="2_l5d43"]
[ext_resource type="FontFile" uid="uid://1sj30jac7go8" path="res://graphics/wwq/CascadiaCode-Regular.ttf" id="3_u4565"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="EmailBankApp" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
current_tab = 0
script = ExtResource("1_b7pj5")

[node name="Emails2" type="HBoxContainer" parent="EmailBankApp"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
metadata/_tab_index = 0

[node name="Emails" type="VBoxContainer" parent="EmailBankApp/Emails2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="PersonTile" type="MarginContainer" parent="EmailBankApp/Emails2/Emails"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="EmailBankApp/Emails2/Emails/PersonTile"]
visible = false
layout_mode = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Person says shit" type="HBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile"]
layout_mode = 2

[node name="email pfp" type="TextureButton" parent="EmailBankApp/Emails2/Emails/PersonTile/Person says shit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("2_l5d43")

[node name="Msg details" type="MarginContainer" parent="EmailBankApp/Emails2/Emails/PersonTile/Person says shit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile/Person says shit/Msg details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="who" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4565")
text = "A PERSON"

[node name="when" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_u4565")
text = "Today 3:05"
horizontal_alignment = 2
vertical_alignment = 2

[node name="PersonTile2" type="MarginContainer" parent="EmailBankApp/Emails2/Emails"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="EmailBankApp/Emails2/Emails/PersonTile2"]
visible = false
layout_mode = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Person says shit" type="HBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile2"]
layout_mode = 2

[node name="email pfp" type="TextureButton" parent="EmailBankApp/Emails2/Emails/PersonTile2/Person says shit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("2_l5d43")

[node name="Msg details" type="MarginContainer" parent="EmailBankApp/Emails2/Emails/PersonTile2/Person says shit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile2/Person says shit/Msg details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="who" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile2/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4565")
text = "A PERSON"

[node name="when" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile2/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_u4565")
text = "Today 3:05"
horizontal_alignment = 2
vertical_alignment = 2

[node name="PersonTile3" type="MarginContainer" parent="EmailBankApp/Emails2/Emails"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="EmailBankApp/Emails2/Emails/PersonTile3"]
visible = false
layout_mode = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Person says shit" type="HBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile3"]
layout_mode = 2

[node name="email pfp" type="TextureButton" parent="EmailBankApp/Emails2/Emails/PersonTile3/Person says shit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("2_l5d43")

[node name="Msg details" type="MarginContainer" parent="EmailBankApp/Emails2/Emails/PersonTile3/Person says shit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile3/Person says shit/Msg details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="who" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile3/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4565")
text = "A PERSON"

[node name="when" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile3/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_u4565")
text = "Today 3:05"
horizontal_alignment = 2
vertical_alignment = 2

[node name="PersonTile4" type="MarginContainer" parent="EmailBankApp/Emails2/Emails"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="EmailBankApp/Emails2/Emails/PersonTile4"]
visible = false
layout_mode = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Person says shit" type="HBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile4"]
layout_mode = 2

[node name="email pfp" type="TextureButton" parent="EmailBankApp/Emails2/Emails/PersonTile4/Person says shit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("2_l5d43")

[node name="Msg details" type="MarginContainer" parent="EmailBankApp/Emails2/Emails/PersonTile4/Person says shit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EmailBankApp/Emails2/Emails/PersonTile4/Person says shit/Msg details"]
layout_mode = 2
size_flags_horizontal = 3

[node name="who" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile4/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4565")
text = "A PERSON"

[node name="when" type="Label" parent="EmailBankApp/Emails2/Emails/PersonTile4/Person says shit/Msg details/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_u4565")
text = "Today 3:05"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MainMail" type="MarginContainer" parent="EmailBankApp/Emails2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="EmailBankApp/Emails2/MainMail"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="EmailBankApp/Emails2/MainMail/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="EmailBankApp/Emails2/MainMail/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
color = Color(0.961271, 0.000104925, 0.760074, 1)

[node name="Label" type="RichTextLabel" parent="EmailBankApp/Emails2/MainMail/VBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_u4565")
theme_override_font_sizes/normal_font_size = 30
text = "aaaaaaaaaaaaaaaaa"

[node name="ColorRect3" type="ColorRect" parent="EmailBankApp/Emails2/MainMail/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="EmailBankApp/Emails2/MainMail/VBoxContainer/ColorRect3"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "aaaaaaaaaaaaaaaaaa"

[node name="Button2" type="Button" parent="EmailBankApp/Emails2/MainMail/VBoxContainer/ColorRect3"]
layout_mode = 0
offset_left = 193.0
offset_right = 369.0
offset_bottom = 31.0
text = "aaaaaaaaaaaaaaaaaa"

[node name="Bank account" type="Container" parent="EmailBankApp"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="EmailBankApp/Bank account"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4565")
text = "this is the place for bank moni graphic $$$"
